# pyfengsha

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
docs/: index.md  reference.md
docs/examples/: gfs_dust_emission.ipynb
examples/: gfs_dust_emission.ipynb  visualize_kok_distribution.py
pyfengsha/: __init__.py  fengsha.F90  fengsha.py  fengsha.pyf  xarray_interface.py
pyfengsha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
site/: 404.html  index.html  objects.inv  sitemap.xml
site/examples/gfs_dust_emission/: index.html
site/reference/: index.html
site/search/: search_index.json
tests/: test_docstrings.py  test_fengsha.py  test_fengsha_helpers.py  test_fengsha_xarray.py  test_xarray_interface.py
